# anywhere

./: .gitignore  Cargo.toml  README.md
control-plane/: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml
control-plane/src/: cloudflare.rs  db.rs  main.rs  routes.rs
mac-app/Sources/ThingsAPIMenuBar/: AccountStore.swift  App.swift  MenuView.swift  ServerManager.swift
mcp/: README.md  package-lock.json  package.json  tsconfig.json
mcp/src/: client.ts  config.ts  index.ts  server.ts  types.ts
mcp/src/tools/: areas.ts  areas_write.ts  lists.ts  projects.ts  projects_write.ts  system.ts  system_write.ts  tags.ts  tags_write.ts  tasks.ts  tasks_write.ts  trash.ts
mcp/src/util/: dates.ts  format.ts
src/: config.rs  main.rs  models.rs
src/applescript/: commands.rs  mod.rs
src/routes/: areas.rs  contacts.rs  lists.rs  mod.rs  projects.rs  system.rs  tags.rs  tasks.rs
tui/: Cargo.toml  Makefile  README.md
tui/src/: app.rs  config.rs  keys.rs  main.rs
tui/src/api/: client.rs  mod.rs  models.rs
tui/src/ui/: detail.rs  help.rs  mod.rs  sidebar.rs  task_list.rs
tui/src/ui/modals/: confirm.rs  mod.rs  move_pick.rs  new_project.rs  new_task.rs  schedule.rs  search.rs  tags.rs
