[package]
name = "things-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for things-api"
license = "MIT"

[[bin]]
name = "things-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
clap = { version = "4", features = ["derive", "env"] }
unicode-width = "0.2"
anyhow = "1"
futures = "0.3"
